# AstraDIY

./: .gitignore  README.md
.github/workflows/: forksync.yml
PCB/AstrAlim/: BOM_AstrAlim_AstrAlim PCB_2024-04-22.xlsx
PCB/AstrAlim__V1.0/: PickAndPlace_AstrAlim PCB_2024-01-08.xlsx  ProProject_AstrAlim_2024-04-22.epro
PCB/AstrOnStep/: Info_PCB_AstrOnStep PCB_2024-04-22.txt  PickAndPlace_AstrOnStep PCB_2024-04-22.xlsx  ProProject_AstrOnStep_2024-04-22.epro
PCB/AstrOnStep_V1.0/: BOM_AstrOnStep_AstrOnStep PCB_2024-04-22.xlsx
PCB_Meca/AstrAlim_V1.1/: Info_PCB_AstrAlim PCB_2024-04-22.txt  PickAndPlace_AstrAlim PCB_2024-04-22.xlsx
PCB_Meca/AstrAlim__V1.0/: BOM_AstrAlim_AstrAlim PCB_2024-01-08.xlsx  ProProject_NAFA AstrAlim_2024-01-08.epro
PCB_Meca/AstrOnStep_V1.0/: Netlist_AstrOnStep SCH_2024-05-31.tel
Software/Install/: README.md  boot_config.txt  etc_chrony_conf.d_chronyastralim.conf  install.sh  install_autostart.sh  install_bootConfig.sh  install_gps.sh  install_scripts.sh  install_teensy.sh
Software/Install/autostart/: AstraDIYHmi.desktop  AstraGpioHmi.desktop  AstraGpsHmi.desktop  AstraInaHmi.desktop  AstraPwmHmi.desktop  AstraSuiteHmi.desktop
Software/Install/gps/: etc_chrony_conf.d_chronyastralim.conf  etc_default_gpsd
Software/indiDriver/: AUTHORS  CMakeLists.txt  Changelog  README.md  astralim_focuser.cpp  astralim_focuser.h  astralim_relays.cpp  astralim_relays.h  astralim_system.cpp  astralim_system.h  indi_astralim_focuser.xml.cmake  indi_astralim_relays.xml.cmake  indi_astralim_system.xml.cmake
Software/pythonDrivers/: AstraCommonHmi.py  AstraDIYHmi.py  AstraGpio.py  AstraGpioHmi.py  AstraGps.py  AstraGpsHmi.py  AstraIna.py  AstraInaHmi.py  AstraPwm.py  AstraPwmHmi.py  AstraSuiteHmi.py  batch  bme280_lib.py  button.py  ina219.py  ina219_lib.py  nafagpio.py  powerIna219.py  survDateOffset.py  syspwm.py
Software/pythonDrivers/1wire/: DS18B20classfile.py  collect1wire.py
Software/pythonDrivers/old/: DS18B20classfile.py  chgGpsBaudRate.sh  nafagpio.py
Software/teensy/: Config.h  ExampleTCM2209_Config.h
doc/: HeaderI2cAlloc.ods  HeaderI2cAlloc_AtraComp.ods
doc/AstrAlim/: README.md
doc/AstrOnStep/: README.md
